--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,3 +108,182 @@
   width: 60px;
   height: 20px;
 }
+
+/* comandi effeti */
+.ex-1-square,
+.ex-3-square,
+.ex-2-square,
+.ex-4-square,
+.ex-5-square,
+.ex-9-img
+{
+  transition: 2s;
+}
+
+.ex-1-square:hover{
+  background-color: red;
+}
+
+.ex-2-square:active{
+  width: 100%;
+}
+
+.ex-3-square:hover{
+  border-radius: 50%;
+}
+
+
+.ex-4-square:hover{
+ opacity: 0;
+}
+
+.ex-5-square:hover{
+  transform: scale(2);
+}
+
+.ex-5-square:active{
+  transform: scale(0.5);
+}
+
+.ex-6-img:hover{
+filter: grayscale();
+}
+
+.ex-7-img,
+.ex-8-img{
+  transition: 3s;
+}
+.ex-7-img:hover,
+.ex-8-img:hover,
+.ex-9-img:hover{
+  filter:grayscale(0.6) sepia(0.7);
+}
+
+.ex-8-img:hover,
+.ex-9-img:hover{
+border-radius: 20px;
+}
+
+.ex-9-img:hover{
+  transform: scale(1.5);
+}
+
+.ex-10-icon{
+  animation: infinite linear;
+  animation-duration: 1s;
+  animation-name: ex-10;
+}
+
+@keyframes ex-10{
+  0%{
+    transform: rotate(0deg);
+  }
+ 
+  100%{
+    transform: rotate(-360deg);
+  }
+}
+
+.ex-11-icon:hover{
+  animation: linear ;
+  animation-duration: 2s;
+  animation-name: ex-11;
+}
+
+@keyframes ex-11{
+  0%{
+    transform: rotate(0deg);
+  }
+  90%{
+    transform: rotate(270deg);
+  }
+  100%{
+    transform: rotate(0deg);
+  }
+}
+
+.ex-12-top-white,
+.ex-12-bottom-white {
+  animation: linear ;
+  animation-duration: 3s;
+}
+
+.ex-12-top-white{
+  animation-name: ex-12;
+}
+
+@keyframes ex-12{
+  0%{
+    left:10% ;
+  }
+  50%{
+    left: calc(90% - 60px);
+  }
+  100%{
+    left:10% ;
+  }
+}
+
+.ex-12-bottom-white{
+  animation-name: ex-12a;
+}
+
+@keyframes ex-12a{
+  0%{
+    left: calc(80% - 60px);
+    
+  }
+  50%{
+    left:10% ;
+  }
+  100%{
+    left: calc(80% - 60px);
+  }
+}
+
+.ex-13-top-white,
+.ex-13-bottom-white {
+  position: absolute;
+  animation: linear ;
+  animation-duration: 3s;
+}
+
+.ex-13-top-white{
+  animation-name: ex-13;
+}
+
+@keyframes ex-13{
+  0%{
+    left:10% ;
+  }
+  25%{
+    left: calc(100% - 60px);
+  }
+  50%{
+    left: calc(100% - 60px);
+    top:10%;
+  }
+
+  75%{
+
+  }
+}
+
+.ex-13-bottom-white{
+  animation-name: ex-13a;
+}
+
+@keyframes ex-13a{
+  0%{
+    left: calc(80% - 60px);
+    
+  }
+  50%{
+    left:10% ;
+  }
+  100%{
+    left: calc(80% - 60px);
+  }
+}
+
+/* / comandi effeti */
